# mowen

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
cli/: README.md  pyproject.toml
cli/src/mowen_cli/: __init__.py  main.py
core/: README.md  pyproject.toml
core/src/mowen/: __init__.py  __init__.py.bak.20260318030603  evaluation.py  exceptions.py  parameters.py  pipeline.py  registry.py  style_change.py  types.py
core/src/mowen/analysis_methods/: __init__.py  absolute_centroid.py  bagging_nn.py  base.py  burrows_delta.py  centroid.py  contrastive.py  decision_tree.py  eders_delta.py  imposters.py  knn.py  lda.py  llm_prompting.py  logistic_regression.py  mahalanobis.py  markov_chain.py  mlp.py  naive_bayes.py  nearest_neighbor.py  random_forest.py  sklearn_base.py  svm.py  thin_xent.py  unmasking.py
core/src/mowen/canonicizers/: __init__.py  base.py  normalize_ascii.py  normalize_whitespace.py  punctuation_separator.py  smash_i.py  strip_comments.py  strip_non_punctuation.py  strip_null_chars.py  strip_numbers.py  strip_punctuation.py  unify_case.py
core/src/mowen/compat/: __init__.py  jgaap_csv.py
core/src/mowen/data/: __init__.py
core/src/mowen/data/function_words/: arabic.txt  chinese.txt  english.txt  french.txt  german.txt  italian.txt  japanese.txt  portuguese.txt  russian.txt  spanish.txt
core/src/mowen/data/sample_corpora/: manifest.json
core/src/mowen/data/sample_corpora/brontes/: Anne_Bronte_Agnes_Grey_ch01.txt  Anne_Bronte_Agnes_Grey_ch03.txt  Anne_Bronte_Agnes_Grey_ch05.txt  Anne_Bronte_Agnes_Grey_ch06.txt  Anne_Bronte_Tenant_of_Wildfell_Hall_ch01.txt  Anne_Bronte_Tenant_of_Wildfell_Hall_ch04.txt  Anne_Bronte_Tenant_of_Wildfell_Hall_ch05.txt  Anne_Bronte_Tenant_of_Wildfell_Hall_ch07.txt  Anne_Brontë_Agnes_Grey_ch02.txt  Anne_Brontë_Agnes_Grey_ch04.txt  Anne_Brontë_Agnes_Grey_ch07.txt  Anne_Brontë_Agnes_Grey_ch08.txt  Anne_Brontë_Tenant_of_Wildfell_Hall_ch02.txt  Anne_Brontë_Tenant_of_Wildfell_Hall_ch03.txt  Anne_Brontë_Tenant_of_Wildfell_Hall_ch06.txt  Anne_Brontë_Tenant_of_Wildfell_Hall_ch08.txt  Charlotte_Bronte_Jane_Eyre_ch02.txt  Charlotte_Bronte_Jane_Eyre_ch03.txt  Charlotte_Bronte_Jane_Eyre_ch08.txt  Charlotte_Brontë_Jane_Eyre_ch01.txt  Charlotte_Brontë_Jane_Eyre_ch04.txt  Charlotte_Brontë_Jane_Eyre_ch05.txt  Charlotte_Brontë_Jane_Eyre_ch06.txt  Charlotte_Brontë_Jane_Eyre_ch07.txt  Emily_Bronte_Wuthering_Heights_ch02.txt  Emily_Bronte_Wuthering_Heights_ch05.txt  Emily_Bronte_Wuthering_Heights_ch07.txt  Emily_Bronte_Wuthering_Heights_ch08.txt  Emily_Brontë_Wuthering_Heights_ch01.txt  Emily_Brontë_Wuthering_Heights_ch03.txt  Emily_Brontë_Wuthering_Heights_ch04.txt  Emily_Brontë_Wuthering_Heights_ch06.txt
core/src/mowen/data/sample_corpora/federalist/: federalist_01.txt  federalist_02.txt  federalist_03.txt  federalist_04.txt  federalist_05.txt  federalist_06.txt  federalist_07.txt  federalist_08.txt  federalist_09.txt  federalist_10.txt  federalist_11.txt  federalist_12.txt  federalist_13.txt  federalist_14.txt  federalist_15.txt  federalist_16.txt  federalist_17.txt  federalist_18.txt  federalist_19.txt  federalist_20.txt  federalist_21.txt  federalist_22.txt  federalist_23.txt  federalist_24.txt  federalist_25.txt  federalist_26.txt  federalist_27.txt  federalist_28.txt  federalist_29.txt  federalist_30.txt  federalist_31.txt  federalist_32.txt  federalist_33.txt  federalist_34.txt  federalist_35.txt  federalist_36.txt  federalist_37.txt  federalist_38.txt  federalist_39.txt  federalist_40.txt  (+45 more)
core/src/mowen/data/sample_corpora/homer/: Homer_Iliad_book01.txt  Homer_Iliad_book02.txt  Homer_Iliad_book03.txt  Homer_Iliad_book04.txt  Homer_Iliad_book05.txt  Homer_Iliad_book06.txt  Homer_Iliad_book07.txt  Homer_Iliad_book08.txt  Homer_Iliad_book09.txt  Homer_Iliad_book10.txt  Homer_Iliad_book11.txt  Homer_Iliad_book12.txt  Homer_Iliad_book13.txt  Homer_Iliad_book14.txt  Homer_Iliad_book15.txt  Homer_Iliad_book16.txt  Homer_Iliad_book17.txt  Homer_Iliad_book18.txt  Homer_Iliad_book19.txt  Homer_Iliad_book20.txt  Homer_Iliad_book21.txt  Homer_Iliad_book22.txt  Homer_Iliad_book23.txt  Homer_Iliad_book24.txt  Homer_Odyssey_book01.txt  (+24 more)
core/src/mowen/distance_functions/: __init__.py  angular_separation.py  base.py  bhattacharyya.py  bray_curtis.py  canberra.py  chi_square.py  chord.py  cosine.py  cross_entropy.py  euclidean.py  hellinger.py  histogram_intersection.py  intersection.py  kendall_correlation.py  kendall_tau_b.py  keselj_weighted.py  kl_divergence.py  manhattan.py  matusita.py  ncd.py  nominal_ks.py  pearson_correlation.py  ppm.py  soergel.py  stamatatos.py  wave_hedges.py  wed.py
core/src/mowen/document_loaders/: __init__.py  base.py  docx.py  html.py  pdf.py  plaintext.py
core/src/mowen/event_cullers/: __init__.py  base.py  coefficient_of_variation.py  extreme.py  index_of_dispersion.py  information_gain.py  iqr.py  least_common.py  mean_absolute_deviation.py  most_common.py  percentage_range.py  range_culler.py  set_culler.py  std_deviation.py  variance.py  weighted_variance.py  zeta.py
core/src/mowen/event_drivers/: __init__.py  base.py  character_events.py  character_ngram.py  definitions.py  function_words.py  gnn_embeddings.py  k_skip_ngram.py  leave_k_out_ngram.py  line_features.py  mn_letter_words.py  mw_function_words.py  ner.py  perplexity.py  porter_stemmer.py  pos_features.py  pos_tags.py  punctuation.py  punctuation_ngram.py  rare_words.py  reaction_time.py  selma_embeddings.py  sentence_features.py  sentence_length.py  sorted_ngram.py  suffix.py  syllables.py  transformer_embeddings.py  truncated_frequency.py  vowel_initial_words.py  vowel_mn_letter_words.py  word_events.py  word_length.py  word_ngram.py
core/src/mowen/tokenizers/: __init__.py  base.py  jieba_tokenizer.py  whitespace.py
server/: README.md  pyproject.toml
server/src/mowen_server/: __init__.py  config.py  db.py  main.py  models.py  runner.py  schemas.py  storage.py
server/src/mowen_server/routers/: corpora.py  documents.py  experiments.py  pipeline.py  sample_corpora.py  style_change.py
(+161 files in other folders)
