[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Component __init__.py files have intentionally ordered imports
"core/src/mowen/canonicizers/__init__.py" = ["I001"]
"core/src/mowen/event_drivers/__init__.py" = ["I001"]
"core/src/mowen/event_cullers/__init__.py" = ["I001"]
"core/src/mowen/distance_functions/__init__.py" = ["I001"]
"core/src/mowen/analysis_methods/__init__.py" = ["I001"]
# Runner uses logging before imports by design
"server/src/mowen_server/runner.py" = ["E402"]
# Pipeline imports after __future__ annotations
"core/src/mowen/pipeline.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
