[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mowen-cli"
version = "2.0.0"
description = "CLI for mowen authorship attribution toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mowen>=1.0.0",
    "typer>=0.9",
]
authors = [
    { name = "John Noecker Jr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/jnoecker/mowen"
Repository = "https://github.com/jnoecker/mowen"

[project.scripts]
mowen = "mowen_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mowen_cli"]
