[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mowen"
version = "0.1.0"
description = "Authorship attribution toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
transformers = ["transformers>=4.36", "torch>=2.1"]
pdf = ["pdfplumber>=0.10"]
docx = ["python-docx>=1.1"]
html = ["beautifulsoup4>=4.12"]
all = ["mowen[nlp,transformers,pdf,docx,html]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mowen"]
