[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mowen"
version = "2.0.0"
description = "Authorship attribution toolkit — stylometric analysis with a configurable pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "John Noecker Jr" },
]
keywords = [
    "authorship-attribution",
    "stylometry",
    "forensic-linguistics",
    "text-analysis",
    "nlp",
    "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jnoecker/mowen"
Repository = "https://github.com/jnoecker/mowen"
Issues = "https://github.com/jnoecker/mowen/issues"

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
transformers = ["transformers>=4.36", "torch>=2.1"]
chinese = ["jieba>=0.42"]
wordnet = ["nltk>=3.8"]
pdf = ["pdfplumber>=0.10"]
docx = ["python-docx>=1.1"]
html = ["beautifulsoup4>=4.12"]
all = ["mowen[nlp,transformers,chinese,wordnet,pdf,docx,html]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mowen"]
