[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mowen-server"
version = "0.1.0"
description = "Web server for mowen authorship attribution toolkit"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mowen>=0.1.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
]
authors = [
    { name = "John Noecker Jr" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/jnoecker/mowen"
Repository = "https://github.com/jnoecker/mowen"

[project.scripts]
mowen-server = "mowen_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mowen_server"]
